..F....... [ZBXNEXT-6294] fixed action button align to top

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -4662,7 +4662,7 @@ $form-icon-btn: (
 }
 
 .top {
-	vertical-align: top;
+	vertical-align: top !important;
 }
 
 .right {
