--- a/ui/assets/styles/blue-theme.css
+++ b/ui/assets/styles/blue-theme.css
@@ -4021,7 +4021,7 @@ z-select[disabled] button, z-select[readonly] button,
   border: 1px dashed #ebeef0; }
 
 .top {
-  vertical-align: top; }
+  vertical-align: top !important; }
 
 .right {
   text-align: right !important; }
