--- a/ui/assets/styles/hc-light.css
+++ b/ui/assets/styles/hc-light.css
@@ -3985,7 +3985,7 @@ z-select[disabled] button, z-select[readonly] button,
   border: 1px dashed #888888; }
 
 .top {
-  vertical-align: top; }
+  vertical-align: top !important; }
 
 .right {
   text-align: right !important; }
